[tool.poetry]
name = "CryptoConverter"
version = "0.1.0"
description = "A command-line application for converting currencies (crypto and fiat)"
authors = ["Jabba Laci <jabba.laci@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
