[project]
name = "CryptoConverter"
version = "0.1.0"
description = "A command-line application for converting currencies (crypto and fiat)"
authors = ["Jabba Laci <jabba.laci@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
]
